<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ScrollViewPadding"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SectionText"
            android:text="@string/agency_advantage_title_one"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextWithLinks"
            android:text="@string/agency_advantage_body_one"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SectionText"
            android:text="@string/agency_advantage_title_two"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextWithLinks"
            android:text="@string/agency_advantage_body_two"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SectionText"
            android:text="@string/agency_advantage_title_three"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextWithLinks"
            android:text="@string/agency_advantage_body_three"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SectionText"
            android:text="@string/agency_advantage_title_four"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextWithLinks"
            android:text="@string/agency_advantage_body_four"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SectionText"
            android:text="@string/agency_advantage_title_five"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextWithLinks"
            android:text="@string/agency_advantage_body_five"/>
    </LinearLayout>
</ScrollView>

