<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_16dp"
    android:paddingRight="@dimen/activity_16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/form_dialog_fio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText"
            android:hint="@string/form_dialog_hint_fio"
            android:inputType="textCapWords"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/form_dialog_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText"
            android:hint="@string/form_dialog_hint_email"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/form_dialog_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText"
            android:hint="@string/form_dialog_hint_phone"
            android:inputType="phone"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/form_dialog_comm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText"
            android:hint="@string/form_dialog_hint_comm"
            android:inputType="textCapSentences"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_dialog_field_hint"
        android:textColor="@color/colorSecondaryText"
        android:textSize="12sp"/>
</LinearLayout>